--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Reaction
                 </div>
                 <div class="marks">
-                    80/100
+                   <span> 80 </span> / 100
                 </div>
             </div>
             <div class="memory-box">
@@ -50,7 +50,7 @@
                     Memory
                 </div>
                 <div class="marks">
-                    92/100
+                    <span> 92 </span> / 100
                 </div>
             </div>
             <div class="verbal-box">
@@ -61,7 +61,7 @@
                     Verbal
                 </div>
                 <div class="marks">
-                    61/100
+                    <span> 62 </span> / 100
                 </div>
             </div>
             <div class="visual-box">
@@ -72,7 +72,7 @@
                     Visual
                 </div>
                 <div class="marks">
-                    72/100
+                    <span> 72 </span> / 100
                 </div>
             </div>
             <div class="button">
