--- a/index.html
+++ b/index.html
@@ -7,76 +7,78 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="full-body">
-        <div class="result-box">
-            <div class="result">
-                Your Result
-            </div>
-            <div class="circle">
-                <div class="obtn-marks">
-                    76
+    <div class="body">
+        <div class="background">
+            <div class="result-box">
+                <div class="result">
+                    Your Result
                 </div>
-                <div class="total-marks">
-                    of 100
+                <div class="circle">
+                    <div class="obtn-marks">
+                        76
+                    </div>
+                    <div class="total-marks">
+                        of 100
+                    </div>
                 </div>
-            </div>
-            <div class="great">
-                Great
-            </div>
-            <div class="btm-txt">
-                You scored higher than 65% of the people who have taken these tests.
-            </div>
-        </div>
-        <div class="summary-box">
-            <div class="summary">
-                Summary
-            </div>
-            <div class="reaction-box">
-                <div class="imgs">
-                    <img src="images/icon-reaction.svg">
+                <div class="great">
+                    Great
                 </div>
-                <div class="reaction">
-                    Reaction
-                </div>
-                <div class="marks">
-                   <span> 80 </span> / 100
+                <div class="btm-txt">
+                    You scored higher than 65% of the people who have taken these tests.
                 </div>
             </div>
-            <div class="memory-box">
-                <div class="imgs">
-                    <img src="images/icon-memory.svg">
+            <div class="summary-box">
+                <div class="summary">
+                    Summary
                 </div>
-                <div class="memory">
-                    Memory
+                <div class="reaction-box">
+                    <div class="imgs">
+                        <img src="images/icon-reaction.svg">
+                    </div>
+                    <div class="reaction">
+                        Reaction
+                    </div>
+                    <div class="marks">
+                       <span> 80 </span> / 100
+                    </div>
                 </div>
-                <div class="marks">
-                    <span> 92 </span> / 100
+                <div class="memory-box">
+                    <div class="imgs">
+                        <img src="images/icon-memory.svg">
+                    </div>
+                    <div class="memory">
+                        Memory
+                    </div>
+                    <div class="marks">
+                        <span> 92 </span> / 100
+                    </div>
                 </div>
-            </div>
-            <div class="verbal-box">
-                <div class="imgs">
-                    <img src="images/icon-verbal.svg">
+                <div class="verbal-box">
+                    <div class="imgs">
+                        <img src="images/icon-verbal.svg">
+                    </div>
+                    <div class="verbal">
+                        Verbal
+                    </div>
+                    <div class="marks">
+                        <span> 62 </span> / 100
+                    </div>
                 </div>
-                <div class="verbal">
-                    Verbal
+                <div class="visual-box">
+                    <div class="imgs">
+                        <img src="images/icon-visual.svg">
+                    </div>
+                    <div class="visual">
+                        Visual
+                    </div>
+                    <div class="marks">
+                        <span> 72 </span> / 100
+                    </div>
                 </div>
-                <div class="marks">
-                    <span> 62 </span> / 100
+                <div>
+                    <button class="button"> Continue </button>
                 </div>
-            </div>
-            <div class="visual-box">
-                <div class="imgs">
-                    <img src="images/icon-visual.svg">
-                </div>
-                <div class="visual">
-                    Visual
-                </div>
-                <div class="marks">
-                    <span> 72 </span> / 100
-                </div>
-            </div>
-            <div class="button">
-                <button> Continue </button>
             </div>
         </div>
     </div>
